[package]
name = "bloomfilter"
version = "1.0.12"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Bloom filter implementation"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-bloom-filter"
repository = "https://github.com/jedisct1/rust-bloom-filter"
edition = "2018"
keywords = ["bloom", "filter"]
readme = "README.md"

[dependencies]
bit-vec = "0.6.3"
getrandom = { version = "0.2.10", optional = true }
siphasher = "1.0.0"

[features]
default = ["random"]
random = ["getrandom"]
serde = ["siphasher/serde_std", "bit-vec/serde"]
