[package]
name = "bloomfilter"
version = "1.0.12"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Bloom filter implementation"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-bloom-filter"
repository = "https://github.com/jedisct1/rust-bloom-filter"
edition = "2018"
keywords = ["bloom", "filter"]
readme = "README.md"

[dependencies]
bit-vec = { version = "0.6.3", default-features = false }
getrandom = { version = "0.2.10", optional = true }
libm = "0.2.7"
siphasher = { version = "1.0.0", default-features = false }

[features]
default = ["random", "std"]
random = ["getrandom"]
serde = ["std", "siphasher/serde_std", "bit-vec/serde"]
std = ["bit-vec/std", "siphasher/std"]
