[package]
name = "bloomfilter"
version = "1.0.15"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Bloom filter implementation"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-bloom-filter"
repository = "https://github.com/jedisct1/rust-bloom-filter"
edition = "2018"
keywords = ["bloom", "filter"]
readme = "README.md"

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", optional = true, features = ["js"] }

[target.'cfg(not(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown")))'.dependencies]
getrandom = { version = "0.2", optional = true }

[dependencies]
bit-vec = "0.8.0"
siphasher = "1.0.1"

[features]
default = ["random"]
random = ["getrandom"]
serde = ["siphasher/serde_std", "bit-vec/serde"]
